syntax = "proto3";
package saonetwork.sao.sao;

option go_package = "github.com/SaoNetwork/sao/x/sao/types";

message TimeoutOrder {
  uint64 height = 1; 
  repeated uint64 orderList = 2; 
  
}

